# SPF_RedLightCameraPlugin

./: CMakeLists.txt  README.md  SPF_RedLightCamera.cpp  SPF_RedLightCamera.hpp
SPF_API/: SPF_Camera_API.h  SPF_Config_API.h  SPF_Environment_API.h  SPF_Formatting_API.h  SPF_GameConsole_API.h  SPF_GameLog_API.h  SPF_Hooks_API.h  SPF_Icons.h  SPF_JsonReader_API.h  SPF_KeyBinds_API.h  SPF_Localization_API.h  SPF_Logger_API.h  SPF_Manifest_API.h  SPF_Plugin.h  SPF_TelemetryData.h  SPF_Telemetry_API.h  SPF_UI_API.h  SPF_Vehicle_API.h  SPF_VirtInput_API.h
localization/: en.json
